NIFI-12648 Refactor components in elasticsearch bundle using current API methods
Signed-off-by: Joe Gresock <jgresock@gmail.com>

This closes #8303.