@@ -81,8 +81,8 @@ public abstract class AbstractByQueryElasticsearchTest {
         runner.assertTransferCount(AbstractByQueryElasticsearch.REL_SUCCESS, 1);
 
         final List<MockFlowFile> flowFiles = runner.getFlowFilesForRelationship(AbstractByQueryElasticsearch.REL_SUCCESS);
-        final String attr = flowFiles.get(0).getAttribute(tookAttr());
-        final String query = flowFiles.get(0).getAttribute(queryAttr());
+        final String attr = flowFiles.getFirst().getAttribute(tookAttr());
+        final String query = flowFiles.getFirst().getAttribute(queryAttr());
         assertNotNull(attr);
         assertEquals("100", attr);
         assertNotNull(query);
@@ -130,7 +130,7 @@ public abstract class AbstractByQueryElasticsearchTest {
 
     @Test
     void testInvalidQueryProperty() {
-        runner.setProperty(ElasticsearchRestProcessor.QUERY_DEFINITION_STYLE, QueryDefinitionType.FULL_QUERY.getValue());
+        runner.setProperty(ElasticsearchRestProcessor.QUERY_DEFINITION_STYLE, QueryDefinitionType.FULL_QUERY);
         runner.setProperty(ElasticsearchRestProcessor.INDEX, "test-index");
         runner.setProperty(ElasticsearchRestProcessor.QUERY, "not-json");
 
@@ -140,7 +140,7 @@ public abstract class AbstractByQueryElasticsearchTest {
 
     @Test
     void testInvalidQueryBuilderProperties() {
-        runner.setProperty(ElasticsearchRestProcessor.QUERY_DEFINITION_STYLE, QueryDefinitionType.BUILD_QUERY.getValue());
+        runner.setProperty(ElasticsearchRestProcessor.QUERY_DEFINITION_STYLE, QueryDefinitionType.BUILD_QUERY);
         runner.setProperty(ElasticsearchRestProcessor.INDEX, "test-index");
         runner.setProperty(ElasticsearchRestProcessor.QUERY_CLAUSE, "not-json");
         runner.setProperty(ElasticsearchRestProcessor.SCRIPT, "not-json-script");
@@ -221,7 +221,7 @@ public abstract class AbstractByQueryElasticsearchTest {
         runner.assertTransferCount(AbstractByQueryElasticsearch.REL_SUCCESS, 0);
         runner.assertTransferCount(AbstractByQueryElasticsearch.REL_FAILURE, 1);
 
-        final MockFlowFile mockFlowFile = runner.getFlowFilesForRelationship(AbstractByQueryElasticsearch.REL_FAILURE).get(0);
+        final MockFlowFile mockFlowFile = runner.getFlowFilesForRelationship(AbstractByQueryElasticsearch.REL_FAILURE).getFirst();
         final String attr = mockFlowFile.getAttribute(errorAttr());
         assertNotNull(attr);
     }
@@ -280,7 +280,7 @@ public abstract class AbstractByQueryElasticsearchTest {
     @ParameterizedTest
     @MethodSource
     void testQueryBuilder(final String queryClause, final String script, final String expectedQuery) throws Exception {
-        runner.setProperty(ElasticsearchRestProcessor.QUERY_DEFINITION_STYLE, QueryDefinitionType.BUILD_QUERY.getValue());
+        runner.setProperty(ElasticsearchRestProcessor.QUERY_DEFINITION_STYLE, QueryDefinitionType.BUILD_QUERY);
 
         if (queryClause != null) {
             runner.setProperty(ElasticsearchRestProcessor.QUERY_CLAUSE, queryClause);
